PyMaker/datas/object2/RawHTML/i16901/Python_DOC_referPages.can-someone-explain-this-python-syntax.txt
<div class="post-text" itemprop="text">
<p>I am working with Pyramid for Python and there are several files that have the syntax below. I'm very new to Python, and none of the 3 books I have read so far mention this format. </p>
<pre><code>[logger_sqlalchemy]
level = INFO
handlers =
qualname = sqlalchemy.engine
</code></pre>
<p>My guess is that it's a way of creating a list named logger_sqlalchemy.</p>
<pre><code>logger_sqlalchemy = [level:INFO, handlers:'', qualname:sqlalchemy]
</code></pre>
<p>Is this what the code is doing?</p>
</div>
<div class="post-text" itemprop="text">
<p>It's not a Python file, but a logging configuration file. See <a href="https://docs.python.org/3/library/logging.config.html#logging-config-fileformat">logging config file format</a>.</p>
</div>
<div class="post-text" itemprop="text">
<p>That syntax appears to be completely off. However, if you appear to have ascertained it correctly, it would not be a list, because that raises a <code>SyntaxError</code>:</p>
<pre><code>&gt;&gt;&gt; logger_sqlalchemy = ['level':'INFO', 'handlers':'', 'qualname':'sqlalchemy'] 
  File "&lt;stdin&gt;", line 1
    logger_sqlalchemy = ['level':'INFO', 'handlers':'', 'qualname':'sqlalchemy']
                                ^
SyntaxError: invalid syntax
</code></pre>
<p>Instead, it would be a <em>dictionary</em>:</p>
<pre><code>&gt;&gt;&gt; logger_sqlalchemy = {'level':'INFO', 'handlers':'', 'qualname':'sqlalchemy'} 
&gt;&gt;&gt; logger_sqlalchemy['handlers']
''
&gt;&gt;&gt; logger_sqlalchemy['level']
'INFO'
&gt;&gt;&gt; 
</code></pre>
</div>
<span class="comment-copy">The text you have shown is not valid Python syntax. Perhaps it's a configuration file that is read by a Python program?</span>
<span class="comment-copy">Thanks that clarified it for me.</span>
<span class="comment-copy">You mean, "instead, it will be a <i>dictionary</i>"</span>
<span class="comment-copy">good point, @anana</span>
<span class="comment-copy">Edited to fix that, if you were the downvoter, please undownvote?</span>
<span class="comment-copy">I was not but I'll give you an upvote to compensate. It's good for python beginners to learn the difference between lists and dictionaries.</span>
<span class="comment-copy">Thank you, appreciate it!</span>
